Add personal API tokens for user services
